# feather-dualsense

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  build_config.h.in  pico_sdk_import.cmake
.github/workflows/: build-feather.yml
boards/: feather_host.cmake  feather_host.h
docs/: BUILD.md
src/: build_config.h  device_out.cc  device_out.h  host_reader.cc  host_reader.h  main.cc  mapping.h  mode.cc  mode.h  status_hid.cc  status_hid.h  tusb_config.h  usb_descriptors.cc  usb_helpers.h  usb_layout.h
tools/: status_overlay.html
tools/macos-status-overlay/: Package.swift
tools/macos-status-overlay/Sources/DualPakkaStatusOverlay/: ControllerSceneView.swift  DualPakkaStatusOverlayApp.swift  HidStatusReader.swift  ObjModelLoader.swift  OverlayView.swift  StatusReport.swift  WindowAccessor.swift
tools/status_bridge/: go.mod  hid_darwin.go  hid_hidapi.go  main.go
